--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,7 +1,6 @@
-<div>
-  <ul>
-    <il *ngFor="let product of products">
-      {{product.albumName.name}}
-    </il>
-  </ul>
-</div>
+<ul>
+  <il *ngFor="let product of products">
+    {{product.albumName}}
+  </il>
+</ul>
+
