--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,6 +1,6 @@
 <ul>
-  <il *ngFor="let product of products">
+  <li *ngFor="let product of products">
     {{product.albumName}}
-  </il>
+  </li>
 </ul>
 
